canvas now picking the image preview

--- a/src/Forms/Train.css
+++ b/src/Forms/Train.css
@@ -10,3 +10,10 @@
     border-width: 1px;
     border-color: rgba(0, 0, 0, 0);
 }
+
+#canvas { 
+    border: 1px solid #000; 
+    /*background-image: url("sample.jpg"); */
+    background-repeat: no-repeat; 
+    background-size: auto auto;
+}
